# swictation

./: .claude  .claude-flow  .gitattributes  .gitignore  .gitmodules  .hive-mind  .swarm  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REBOOT_REQUIRED.md  START_TRAY_APP.sh  TEST_FP16.md  coordination  hive  memory  requirements-qt-tray.txt  requirements.txt  rust_mel_features.csv  test-maxwell-stt.rs  test_tauri_launch.py
config/: config.example.toml  streaming.yaml  sway-keybinding.conf  swictation-daemon.service  swictation-tauri.service  swictation-tray.service  swictation-ui.service  swictation.service
docs/: 2025-11-03T03-30-45_qt6_qsystemtrayicon_double_click_single_click_inte.json  2025-11-03T03-30-45_qt6_qsystemtrayicon_double_click_single_click_inte.md  2025-11-03T03-31-46_qt_qsystemtrayicon_wayland_linux_platform_specific.json  2025-11-03T03-31-46_qt_qsystemtrayicon_wayland_linux_platform_specific.md  2025-11-03T03-32-25_qt_tray_icon_timer_debounce_double_click_disambigu.json  2025-11-03T03-32-25_qt_tray_icon_timer_debounce_double_click_disambigu.md  2025-11-12T07-35-29_nvidia_parakeet_tdt_1_1b_punctuation_capitalizatio.md  2025-11-12T07-36-06_parakeet_tdt_ctc_decoder_post_processing_punctuati.md  2025-11-12T07-36-50_onnx_runtime_vad_segmentation_word_boundary_spacin.md  2025-11-12T07-37-48_nemo_asr_streaming_punctuation_capitalization_mode.md  ACTUAL_ROOT_CAUSE.md  AHA-20-FINAL-SUMMARY.md  AHA-21-preprocessing-discrepancies.md  ANALYST-DEEP-DIVE-1.1B-IMPLEMENTATION.md  ANALYST-DELIVERABLES-INDEX.md  ANALYST-VALIDATION-SUMMARY.md  ANALYST-VISUAL-COMPARISON.md  ANALYST_ROOT_CAUSE_REPORT.md  ARCHITECTURE_ANALYSIS_COMPREHENSIVE.md  ARCHITECTURE_GPU_SUPPORT.md  BACKEND-AGENT-COMPLETE.md  BATCH_MODE_MIGRATION.md  BATCH_MODE_SUMMARY.md  BOUNDED_CHANNELS.md  BUILD_v0.3.1.md  CLEANUP_PLAN.md  CRITICAL-FIX-decoder-compilation-error.md  CUDA_SETUP_COMPLETE.md  DAEMON_EVENT_VERIFICATION.md  FP16_IMPLEMENTATION_STATUS.md  FP16_PRECISION_GUIDE.md  FP16_TESTING_GUIDE.md  FP16_VERIFICATION_RESULTS.md  GITHUB_RELEASE_INSTRUCTIONS.md  GPU_ACCELERATION_SETUP.md  GPU_ARCHITECTURE_EXECUTIVE_SUMMARY.md  GPU_ENVIRONMENT_FIX.md  GPU_LIBRARY_PACKAGES.md  HIVE-CODER-SYNTHESIS.md  HIVE-MIND-DIAGNOSIS-RUST-MMHMM-BUG.md  (+168 more)
examples/: en-long.txt  en-short.txt  streaming_example.py
npm-package/: .npmignore  .npmrc  CHANGELOG.md  README.md  (+13 more)
rust-crates/swictation-audio/: Cargo.toml  MIGRATION_CHECKLIST.md
rust-crates/swictation-audio/examples/: list_devices.rs  record_test.rs  test_live_audio.rs
rust-crates/swictation-audio/src/: buffer.rs  capture.rs  error.rs  lib.rs  resampler.rs
rust-crates/swictation-broadcaster/: Cargo.toml  README.md
rust-crates/swictation-broadcaster/src/: broadcaster.rs  client.rs  error.rs  events.rs  lib.rs
rust-crates/swictation-broadcaster/tests/: integration_tests.rs
rust-crates/swictation-context-learning/: Cargo.toml  README.md
rust-crates/swictation-context-learning/examples/: daemon_integration.rs  research_harness.rs
rust-crates/swictation-context-learning/src/: clustering.rs  homonym.rs  lib.rs  patterns.rs  validation.rs
rust-crates/swictation-daemon/: Cargo.toml  build.rs  test_pipeline_acoustic.sh
rust-crates/swictation-daemon/entitlements/: daemon.entitlements
rust-crates/swictation-daemon/examples/: list_devices.rs  test_audio_file.rs  test_gpu_acceleration.rs  test_gpu_benchmark.rs  test_pipeline_end_to_end.rs
rust-crates/swictation-daemon/src/: capitalization.rs  config.rs  corrections.rs  display_server.rs  gpu.rs  hotkey.rs  ipc.rs  lib.rs  macos_audio_permission.rs  macos_text_inject.rs  main.rs  pipeline.rs  socket_utils.rs  text_injection.rs  version.rs
rust-crates/swictation-daemon/tests/: audio_loop back_test.rs  context_integration_test.rs  display_server_detection.rs  orchestrator_test.rs  test_helpers.rs
rust-crates/swictation-metrics/: Cargo.toml  wasm-pack.toml
rust-crates/swictation-metrics/src/: collector.rs  database.rs  gpu.rs  lib.rs  memory.rs  models.rs  wasm.rs
rust-crates/swictation-paths/: Cargo.toml
rust-crates/swictation-paths/src/: lib.rs
rust-crates/swictation-stt/: Cargo.toml  test_1_1b.sh  test_reference.py
rust-crates/swictation-stt/docs/: IMPLEMENTATION_COMPARISON.md  PHASE_A_ANALYSIS.md
rust-crates/swictation-stt/examples/: README.md  benchmark_models.rs  compare_models.rs  detailed_gpu_profile.rs  export_mel_features.rs  export_raw_audio.rs  gpu_benchmark.rs  load_model.rs  test_0_6b_config.rs  test_1_1b.rs  test_1_1b_direct.rs  test_1_1b_regression.rs  test_accuracy.rs  test_all_languages.rs  test_audio_loading.rs  test_encoder_only.rs  test_features.rs  test_maxwell_inference.rs  test_no_chunking.rs  test_ort_debug.rs  test_ort_direct.rs  test_parakeet_rs.rs  test_phase_a_fixed.rs  test_recognizer.rs  test_sherpa_rs.rs  test_simple_samples.rs  transcribe_wav.rs
rust-crates/swictation-stt/src/: audio.rs  engine.rs  error.rs  features.rs  lib.rs  model.rs  recognizer.rs  recognizer_ort.rs  tokens.rs
rust-crates/swictation-stt/tests/: test_e2e_acoustic.rs
rust-crates/swictation-vad/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  ONNX_THRESHOLD_GUIDE.md  README.md
rust-crates/swictation-vad/docs/: IMPLEMENTATION_RESULTS.md
rust-crates/swictation-vad/examples/: analyze_waveform_windows.rs  diagnose_audio_amplitude.rs  test_acoustic_loopback.rs  test_vad_basic.rs  test_vad_realfile.rs  verify_threshold.rs
rust-crates/swictation-vad/src/: error.rs  lib.rs  silero_ort.rs
rust-crates/swictation-vad/tests/: integration_test.rs
rust-crates/swictation-wasm-utils/: Cargo.toml
rust-crates/swictation-wasm-utils/src/: lib.rs
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/capabilities/: default.json
tauri-ui/src-tauri/entitlements/: ui.entitlements
tauri-ui/src-tauri/src/: main.rs  main.rs.example
tauri-ui/src-tauri/src/commands/: config.rs  corrections.rs  mod.rs
tauri-ui/src-tauri/src/database/: mod.rs
tauri-ui/src-tauri/src/models/: mod.rs
tauri-ui/src-tauri/src/socket/: metrics.rs  mod.rs  socket_utils.rs
tauri-ui/src-tauri/src/utils/: mod.rs
(+324 files in other folders)
