[package]
name = "swictation-broadcaster"
version = "0.2.2"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["net", "sync", "rt-multi-thread", "io-util", "macros"] }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
# Metrics models
swictation-metrics = { path = "../swictation-metrics" }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
