[package]
name = "swictation-context-learning"
version = "0.1.0"
edition = "2021"
description = "Context-aware meta-learning from segment patterns"

[dependencies]
# Database access
rusqlite = { version = "0.32", features = ["bundled"] }

# Meta-learning (strange-loop from midstream)
midstreamer-strange-loop = { path = "../../external/midstream/crates/strange-loop" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Statistics and clustering
ndarray = "0.16"
linfa = "0.7"
linfa-clustering = "0.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = "0.3"
dirs = "5.0"
