[package]
name = "swictation-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
swictation-audio = { path = "../swictation-audio" }
swictation-vad = { path = "../swictation-vad" }
swictation-stt = { path = "../swictation-stt" }

# Text transformation (voice commands → symbols)
midstreamer-text-transform = { path = "../../external/midstream/crates/text-transform" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# System interaction
enigo = "0.2"           # Text injection
sysinfo = "0.32"        # System monitoring
global-hotkey = "0.6"   # Cross-platform hotkey registration

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs = "5.0"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GPU detection (optional, for detailed GPU info)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D12"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[features]
default = []
gpu-info = ["windows", "metal"]
