[package]
name = "swictation-daemon"
version = "0.2.2"
edition = "2021"

[lib]
name = "swictation_daemon"
path = "src/lib.rs"

[[bin]]
name = "swictation-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates
swictation-audio = { path = "../swictation-audio" }
swictation-vad = { path = "../swictation-vad" }
swictation-stt = { path = "../swictation-stt" }
swictation-broadcaster = { path = "../swictation-broadcaster" }
swictation-metrics = { path = "../swictation-metrics" }

# Text transformation (voice commands → symbols)
midstreamer-text-transform = { path = "../../external/midstream/crates/text-transform" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Time and dates
chrono = "0.4"

# System interaction
# enigo removed - using native text injection via wtype/xdotool/ydotool
sysinfo = "0.32"        # System monitoring
global-hotkey = "0.6"   # Cross-platform hotkey registration (X11, Windows, macOS)
swayipc = { version = "3.0", optional = true }  # Sway/Wayland IPC (optional, for future Sway-specific features)

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Audio file I/O (for debug)
hound = "3.5"

# GPU detection (optional, for detailed GPU info)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D12"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[features]
default = ["sway-integration"]  # Full platform support by default (X11, Wayland, Sway)
gpu-info = ["windows", "metal"]
sway-integration = ["swayipc"]  # Sway/Wayland IPC integration
minimal = []  # Minimal build without Sway support (embedded systems only)
