[package]
name = "swictation-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Statistics
statistical = "1.0"

# Async runtime (for background writes)
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = "0.1"

# Directory utilities
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
