[package]
name = "swictation-metrics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for native

[dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Statistics
statistical = "1.0"

# Async runtime (for background writes) - disabled for WASM
tokio = { version = "1.0", features = ["full"], optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = "0.1"

# Directory utilities
dirs = "5.0"

# System monitoring
sysinfo = "0.32"

# WASM bindings (for Node.js/browser)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

# GPU monitoring - platform-specific (MANDATORY for native, excluded from WASM)
[target.'cfg(all(any(target_os = "linux", target_os = "windows"), not(target_family = "wasm")))'.dependencies]
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(all(target_os = "macos", not(target_family = "wasm")))'.dependencies]
metal = { version = "0.29", optional = true }

[features]
default = ["gpu-monitoring", "tokio"]
gpu-monitoring = ["nvml-wrapper", "metal"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"     # Optimize for size (WASM)
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
