[package]
name = "swictation-stt"
version = "0.1.0"
edition = "2021"
description = "Pure Rust speech-to-text with ONNX Runtime and Parakeet-TDT-0.6B-V3"
license = "Apache-2.0"
repository = "https://github.com/robertelee78/swictation"
keywords = ["stt", "speech-to-text", "onnx", "parakeet", "asr"]
categories = ["multimedia::audio", "science"]

[lib]
name = "swictation_stt"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Sherpa-RS for Parakeet-TDT inference (supports separate decoder/joiner)
# Using git version with sherpa-onnx v1.12.15 for CUDA 12.x + cuDNN 9.x support
sherpa-rs = { git = "https://github.com/thewh1teagle/sherpa-rs.git", default-features = false, features = ["cuda"] }

# Direct ONNX Runtime for 1.1B model (bypasses sherpa-rs external weights bug)
ort = { version = "2.0.0-rc.10", features = ["ndarray", "half", "load-dynamic"] }
ndarray = "0.16"  # Match ort's ndarray version

# Audio processing for 1.1B model
rustfft = "6.2"        # FFT computation for mel-spectrogram
hound = "3.5"          # WAV file reading
symphonia = { version = "0.5", features = ["mp3"] }  # MP3/FLAC decoding

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
approx = "0.5"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
