[package]
name = "swictation-stt"
version = "0.2.2"
edition = "2021"
description = "Pure Rust speech-to-text with direct ONNX Runtime and Parakeet-TDT models"
license = "Apache-2.0"
repository = "https://github.com/robertelee78/swictation"
keywords = ["stt", "speech-to-text", "onnx", "parakeet", "asr"]
categories = ["multimedia::audio", "science"]

[lib]
name = "swictation_stt"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Direct ONNX Runtime for all models (0.6B and 1.1B)
# Using rc.8 which supports ORT 1.21.x (system has 1.21.0)
ort = { version = "2.0.0-rc.8", features = ["ndarray", "half", "load-dynamic"] }
ndarray = "0.16"  # Match ort's ndarray version

# Audio processing for 1.1B model
rustfft = "6.2"        # FFT computation for mel-spectrogram
hound = "3.5"          # WAV file reading
symphonia = { version = "0.5", features = ["mp3"] }  # MP3/FLAC decoding

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
