[package]
name = "swictation-ui"
version = "0.1.0"
description = "Tauri-based UI for Swictation dictation system"
authors = ["Swictation Team"]
license = "MIT"
repository = "https://github.com/ruvnet/swictation"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
dirs = "5.0"

# Config file format
toml = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
